assets/containers: correct the fixe for image overlap

--- a/euth_wagtail/assets/scss/wagtail-blocks/_blocks.scss
+++ b/euth_wagtail/assets/scss/wagtail-blocks/_blocks.scss
@@ -58,13 +58,16 @@
 
     &.m-highlight,
     &.m-boxed,
+    &.m-boxed--vertical,
     & input,
     & textarea {
         color: $body-bg;
     }
 
     &.m-boxed,
-    .m-boxed.m-variation {
+    .m-boxed.m-variation,
+    .m-boxed--veritical,
+    .m-boxed--vertical.m-variation {
         color: $gray-dark;
     }
 
@@ -107,7 +110,7 @@
         }
     }
 
-    &.m-boxed {
+    &.m-boxed--vertical {
         padding: 0;
 
         .container-inner {
